# solver_integrated

./: 20grains16x16x16_tensionX_material.hdf5  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  diff.sh  sources.txt
cmake/: Compiler-GNU.cmake
examples/grid/: tensionX.yaml
install/MarcMentat/2021.3.1/Marc_tools/: run_damask_mp.patch
mod_files/: cli.mod  constants.mod  homogenization@damage_pass.smod  homogenization@mechanical.smod  parallelization.mod  phase@eigen.smod  phase@isobrittle.smod  phase@mechanical.smod  phase@nonlocal.smod  phase@phenopowerlaw.smod  phase@source_dissipation.smod  phase@thermal.smod  phase@thermalexpansion.smod  prec.mod
src/: CLI.f90  CMakeLists.txt  HDF5_utilities.f90  IO.f90  Makefile  YAML_parse.f90  YAML_types.f90  cmake_install.cmake  config.f90  crystal.f90  homogenization.f90  homogenization_mechanical.f90  homogenization_mechanical_RGC.f90  material.f90  materialpoint.f90  math.f90  misc.f90  phase.f90  phase_mechanical.f90  phase_mechanical_elastic.f90  phase_mechanical_plastic.f90  polynomials.f90  result.f90  rotations.f90  tables.f90  tensor_printer.f90
src/grid/: CMakeLists.txt  Makefile  VTI.f90  cmake_install.cmake  config.cpp  config.h  damask_grid.cpp  damask_grid.h  discretization_grid.cpp  discretization_grid.h  eigen_wrapper.cpp  fft.cpp  fft.h  helper.h  main.cpp  mech_base.cpp  mech_base.h  mech_solver_basic.cpp  mech_solver_basic.h  spectral.cpp  spectral.h  utilities_fortran.h  utilities_tensor.h
src/grid/test/: CMakeLists.txt  Makefile  cmake_install.cmake  conftest.h  stub_fortran_interface.f90  test_config  test_config.cpp  test_cpp_fortran_interface  test_cpp_fortran_interface.cpp  test_damask_grid.cpp  test_discretization_grid.cpp  test_fft.cpp  test_mech_base.cpp  test_mech_solver_basic.cpp  test_spectral.cpp
